src/test/deca/codegen/valid/addIntFloat.deca
// Description:
//    Addition d'un int et un float
//
// Resultats:
//    4.40000e+00
//
// Historique:
//    cree le 07/01/2023

{
	int i = 4;
	float j = 0.4;
	j = j + i;
	println(j);
}