src/test/deca/codegen/invalid/addFloatIntoInt.deca
// Description:
//    Tentative d'addition d'un float et un int dans un int (impossible car nous ne pouvons pas transformer un float en int)
//
// Resultats:
//    ligne 13 : Erreur, pas possible de transformer un float en int
//
// Historique:
//    cree le 07/01/2023

{
	int i = 4;
	float j = 0.4;
	i = j + i;
	print(i);
}